--- a/index.html
+++ b/index.html
@@ -7,21 +7,9 @@
 </head>
 <body>
     <h1>Dice Roller App</h1>
-    <div class="dice-selector">
-        <label for="dice-type">Select Dice Type:</label>
-        <select id="dice-type">
-            <option value="4">D4</option>
-            <option value="6" selected>D6</option>
-            <option value="8">D8</option>
-            <option value="10">D10</option>
-            <option value="12">D12</option>
-            <option value="20">D20</option>
-            <option value="100">D100</option>
-        </select>
-    </div>
-    <div class="dice-number">
-        <label for="dice-number">Number of Dice:</label>
-        <input type="number" id="dice-number" value="1" min="1" max="10">
+    <div class="dice-input">
+        <label for="dice-pool">Enter Dice Pool (e.g., 3D100, 1D20, 1D6, 1D4):</label>
+        <input type="text" id="dice-pool" placeholder="e.g., 3D100, 1D20, 1D6, 1D4">
     </div>
     <button id="roll-button">Roll Dice</button>
     <div id="result"></div>
