--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div id="dice-pool">
         <h2>Build Your Dice Pool</h2>
-        <!-- Adding six sets of dropdowns for specifying dice -->
+        <!-- Six sets of dropdowns for specifying dice -->
         <!-- Repeat the following div six times to create six sets of dropdowns -->
         <div class="dice-selector">
             <select class="dice-count">
@@ -32,9 +32,107 @@
                 <option value="100">D100</option>
             </select>
         </div>
-        <!-- End of repeating block -->
-
-        <!-- Add six divs like above to create the full dice pool -->
+        <!-- Repeat this block five more times -->
+        <div class="dice-selector">
+            <select class="dice-count">
+                <option value="0" selected>0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+            </select>
+            <select class="dice-type">
+                <option value="4">D4</option>
+                <option value="6" selected>D6</option>
+                <option value="8">D8</option>
+                <option value="10">D10</option>
+                <option value="12">D12</option>
+                <option value="20">D20</option>
+                <option value="100">D100</option>
+            </select>
+        </div>
+        <div class="dice-selector">
+            <select class="dice-count">
+                <option value="0" selected>0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+            </select>
+            <select class="dice-type">
+                <option value="4">D4</option>
+                <option value="6" selected>D6</option>
+                <option value="8">D8</option>
+                <option value="10">D10</option>
+                <option value="12">D12</option>
+                <option value="20">D20</option>
+                <option value="100">D100</option>
+            </select>
+        </div>
+        <div class="dice-selector">
+            <select class="dice-count">
+                <option value="0" selected>0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+            </select>
+            <select class="dice-type">
+                <option value="4">D4</option>
+                <option value="6" selected>D6</option>
+                <option value="8">D8</option>
+                <option value="10">D10</option>
+                <option value="12">D12</option>
+                <option value="20">D20</option>
+                <option value="100">D100</option>
+            </select>
+        </div>
+        <div class="dice-selector">
+            <select class="dice-count">
+                <option value="0" selected>0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+            </select>
+            <select class="dice-type">
+                <option value="4">D4</option>
+                <option value="6" selected>D6</option>
+                <option value="8">D8</option>
+                <option value="10">D10</option>
+                <option value="12">D12</option>
+                <option value="20">D20</option>
+                <option value="100">D100</option>
+            </select>
+        </div>
+        <div class="dice-selector">
+            <select class="dice-count">
+                <option value="0" selected>0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+            </select>
+            <select class="dice-type">
+                <option value="4">D4</option>
+                <option value="6" selected>D6</option>
+                <option value="8">D8</option>
+                <option value="10">D10</option>
+                <option value="12">D12</option>
+                <option value="20">D20</option>
+                <option value="100">D100</option>
+            </select>
+        </div>
     </div>
 
     <button id="roll-button">Roll Dice</button>
@@ -49,10 +147,4 @@
     </div>
 
     <div id="result"></div>
-    <div id="history">
-        <h2>Roll History</h2>
-        <ul id="history-list"></ul>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
+    <div id="history
