--- a/index.html
+++ b/index.html
@@ -32,107 +32,8 @@
                 <option value="100">D100</option>
             </select>
         </div>
-        <!-- Repeat this block five more times -->
-        <div class="dice-selector">
-            <select class="dice-count">
-                <option value="0" selected>0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-            </select>
-            <select class="dice-type">
-                <option value="4">D4</option>
-                <option value="6" selected>D6</option>
-                <option value="8">D8</option>
-                <option value="10">D10</option>
-                <option value="12">D12</option>
-                <option value="20">D20</option>
-                <option value="100">D100</option>
-            </select>
-        </div>
-        <div class="dice-selector">
-            <select class="dice-count">
-                <option value="0" selected>0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-            </select>
-            <select class="dice-type">
-                <option value="4">D4</option>
-                <option value="6" selected>D6</option>
-                <option value="8">D8</option>
-                <option value="10">D10</option>
-                <option value="12">D12</option>
-                <option value="20">D20</option>
-                <option value="100">D100</option>
-            </select>
-        </div>
-        <div class="dice-selector">
-            <select class="dice-count">
-                <option value="0" selected>0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-            </select>
-            <select class="dice-type">
-                <option value="4">D4</option>
-                <option value="6" selected>D6</option>
-                <option value="8">D8</option>
-                <option value="10">D10</option>
-                <option value="12">D12</option>
-                <option value="20">D20</option>
-                <option value="100">D100</option>
-            </select>
-        </div>
-        <div class="dice-selector">
-            <select class="dice-count">
-                <option value="0" selected>0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-            </select>
-            <select class="dice-type">
-                <option value="4">D4</option>
-                <option value="6" selected>D6</option>
-                <option value="8">D8</option>
-                <option value="10">D10</option>
-                <option value="12">D12</option>
-                <option value="20">D20</option>
-                <option value="100">D100</option>
-            </select>
-        </div>
-        <div class="dice-selector">
-            <select class="dice-count">
-                <option value="0" selected>0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-            </select>
-            <select class="dice-type">
-                <option value="4">D4</option>
-                <option value="6" selected>D6</option>
-                <option value="8">D8</option>
-                <option value="10">D10</option>
-                <option value="12">D12</option>
-                <option value="20">D20</option>
-                <option value="100">D100</option>
-            </select>
-        </div>
+        <!-- Repeat this block five more times to create six dropdown sets -->
+        <!-- Copy the above block for each of the six sets -->
     </div>
 
     <button id="roll-button">Roll Dice</button>
@@ -147,4 +48,10 @@
     </div>
 
     <div id="result"></div>
-    <div id="history
+    <div id="history">
+        <h2>Roll History</h2>
+        <ul id="history-list"></ul>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
