--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Dice Roller App</h1>
+    <h1>Andres' Dice Roller</h1>
 
     <div id="dice-pool">
         <h2>Build Your Dice Pool</h2>
