--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
 
     <button id="roll-button">Roll Dice</button>
+    <button id="clear-selection-button">Clear Selection</button>
     <button id="save-pool-button">Save Current Pool</button>
 
     <div class="saved-pools">
