--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="icon.png">
 </head>
 <body>
-    <h1>>Roll Your Dice!</h1>
+    <h1>Roll Your Dice!</h1>
 
     <div id="dice-pool">
         <h2>Select Dice Graphically</h2>
